I updated the index file

--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,1 @@
-><html><head><h1>THIS IS FUCKING AWESOME</h1></head></html>
+<body onload=”changeColour(‘blinky’);”>   <script type=”text/javascript”><!–   function changeColour(elementId) {     var interval = 100;     var colour1 = “#ff00ff”, colour2 = “blue”;     if (document.getElementById) {       var element = document.getElementById(elementId);       element.style.color = (element.style.color == colour1) ? colour2 : colour1;       setTimeout(“changeColour(‘” + elementId + “‘)”, interval);     }   }   //–></script>   <p id=”blinky”>DO YOU THINK I KNOW WHAT I'M DOING???</p> 
